fix: revert lqip blurred images

--- a/source/sass/component/_image.scss
+++ b/source/sass/component/_image.scss
@@ -119,18 +119,9 @@ $c-image-border-radius: var(--c-image-border-radius, $border-radius-xs) !default
         background-size: cover;
         width: 100%;
         height: 100%;
-
-        &:after {
-            content: "";
-            @include cover();
-            backdrop-filter: blur(4px);
-            z-index: 0;
-        }
     }
     .c-image.c-image--container-query .c-image__image {
         display: none;
-        z-index: $level-1;
-        position: relative;
     }
 }
 @supports not (container-type: size) {
